--- a/mediaportal/MediaPortal.Base/language/strings_nl.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_nl.xml
@@ -2384,5 +2384,13 @@
 	<String id="350024">TvGids</String>
 	<String id="350025">Red Bull TV</String>
 	<String id="350026">YouTube</String>
+	<String id="350027">Worldnews</String>
+	<String id="350028">FritzBox</String>
+	<String id="350029">Radiotime</String>
+	<String id="350030">MvCentral</String>
+	<String id="350031">MultiShortcut</String>
+	<String id="350032">Weer</String>
+	<String id="350033">Verstreken</String>
+	<String id="350034">Eindigt in</String>
   </Section>
 </Language>
