--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1142,6 +1142,9 @@
     <String id="1654">Wind Speed Units</String>
     <String id="1655">Refresh Interval</String>
     <String id="1656">mins</String>    
+    <String id="1657">Unhide/hide protected recording</String> 
+    <String id="1658">Do you want to show them?</String>
+    <String id="1659">Do you want to hide them?</String>
     <String id="1900">Outdated Skin</String>
     <String id="1901">Your currently selected skin ({0}) is outdated. This could cause problems while using MediaPortal. For this reason MediaPortal has temporarily switched to the default skin. If however you would like to try using the outdated skin, press the 'Ignore and try' button, but remember: Do NOT file a bug report using this skin!
 (to dismiss this warning either wait until it closes automatically or press Back/ESC on you remote)</String>
