Fork : Update language.

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -2404,5 +2404,6 @@
     <String id="350036">MultiShortcut3</String>
     <String id="350037">MovingPictures</String>
     <String id="350038">HTPCinfo</String>
+	<String id="350039">Emulators2</String>
    </Section>
 </Language>
