--- a/mediaportal/Configuration/Properties/Resources.resx
+++ b/mediaportal/Configuration/Properties/Resources.resx
@@ -171,6 +171,7 @@
   </data>
   <data name="ms_wed_7000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ms_wed_7000.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="gamepad_LogitechCordlessRumblePad2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gamepad.LogitechCordlessRumblePad2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
