MP1-4761 Add additional fileds in the MyVideo database and IMDBMovie class. For skin engine, grabbers and GUI
Add skin propertiers:
#usergroups - like Group1 / Group2 / Group3
#moviecollection - like Collection1 / Collection2 / Collection3
#tmdbnumber
#localdbnumber
#userrating

Add View handler level:
- Movie collection (movie collection + movies without collection)
- Movie collection only (movie collection only)
- User groups only (user gruops only)

Add support for TMDB ID and Movie collections to TMDB.csscript - Collection
Add support for TMDB ID, Kinopoisk ID, user groups and movie collection to kinopoisk_ru.csscript - Collection and Collection description

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1094,6 +1094,11 @@
     <String id="1321">Auto Decoder Selection</String>
     <String id="1322">Force Source filter</String>
     <String id="1323">Video Codecs for .TS files</String>
+    <String id="1324">Movie collection</String>
+    <String id="1325">Only User groups</String>
+    <String id="1326">Only Movie collection</String>
+    <String id="1327">Add Movie to Collection</String>
+    <String id="1328">Remove selected movie from Collection</String>
     <String id="1440" prefix="My ">Teletext</String>
     <String id="1441">Teletext</String>
     <String id="1442">Scroll speed (horizontal)</String>
