--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/Sections/Satellites.resx
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/Sections/Satellites.resx
@@ -123,6 +123,9 @@
   <metadata name="dataGridViewColumnTuner.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dataGridViewColumnSatIpSource.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="dataGridViewColumnLnbType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
