--- a/TvEngine3/Mediaportal/TV/Server/SetupTv/Sections/Satellites.resx
+++ b/TvEngine3/Mediaportal/TV/Server/SetupTv/Sections/Satellites.resx
@@ -141,6 +141,9 @@
   <metadata name="dataGridViewColumnTone22kState.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dataGridViewColumnPolarisations.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="dataGridViewColumnIsToroidalDish.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
