MP1-4860: Add Collection view and Library view (User Group, Collection, Title) in VideoViews.xml by Default. MP1-4860: Add 1336 String ID (Library) to strings_en.xml and strings_ru.xml

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Language name="English" characters="255">
   <Section name="unmapped">
     <String id="0" prefix="My ">Programs</String>
@@ -1102,6 +1102,7 @@
     <String id="1333">Add Movie to Collection</String>
     <String id="1334">Remove selected movie from Collection</String>
     <String id="1335">Refresh cover</String>
+    <String id="1336">Library</String>
     <String id="1440" prefix="My ">Teletext</String>
     <String id="1441">Teletext</String>
     <String id="1442">Scroll speed (horizontal)</String>
