--- a/mediaportal/MediaPortal.Base/language/strings_ru.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_ru.xml
@@ -1101,6 +1101,7 @@
         <String id="1333">Добавить фильм в коллекцию</String>
         <String id="1334">Удалить фильм из коллекции</String>
         <String id="1335">Обновить обложку</String>
+        <String id="1336">Библиотека</String>
 		<String id="1440" prefix="Мой ">Телетекст</String>
 		<String id="1441">Телетекст</String>
 		<String id="1442">Скорость прокрутки (гор.)</String>
