MP1-4863: Add New Collection from MP GUI MP1-4863: Remove Selected Collection from MP GUI MP1-4863: When delete Movie from User Group/Collection, if more then one User Group/Collection show Dialog MP1-4863: Add to TMDB_DE grabber Awards and MPAA Text support (1.17 and >) MP1-4863: New Language id 1337 and 1338 in EN,RU

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1102,6 +1102,8 @@
     <String id="1333">Add Movie to Collection</String>
     <String id="1334">Remove selected movie from Collection</String>
     <String id="1335">Refresh cover</String>
+    <String id="1337">Add New Collection</String>
+    <String id="1338">Remove Selected Collection</String>
     <String id="1440" prefix="My ">Teletext</String>
     <String id="1441">Teletext</String>
     <String id="1442">Scroll speed (horizontal)</String>
