--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1321,6 +1321,7 @@
     <String id="2145">Import current playlist</String>
     <String id="2146">Not enough space on CD</String>
     <String id="2147">Not enough space on DVD</String>
+    <String id="2166">Delete all recordings in this folder?</String>
     <String id="2200" prefix="My ">Explorer</String>
     <String id="2201">Select source</String>
     <String id="2202">Select destination</String>
