--- a/mediaportal/MediaPortal.Base/language/strings_en-GB.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en-GB.xml
@@ -12,7 +12,7 @@
     <String id="100602">TV/Fullscreen</String>
     <String id="100605">TV/Recorded TV/Genre</String>
     <String id="100606">TV/Recorded TV/Channels</String>
-    <String id="100703">Film settings</String>
+    <String id="100703">Video settings</String>
     <String id="100748">Programme info</String>
     <String id="100749">TV/No Signal</String>
     <String id="100759">Recorded TV info</String>
