--- a/Tools/MediaPortal.DeployTool/MediaPortal.DeployTool.resx
+++ b/Tools/MediaPortal.DeployTool/MediaPortal.DeployTool.resx
@@ -516,6 +516,9 @@ Please proceed with it before continuing with MediaPortal installation.</value>
   <data name="ExtensionChoice_LAV" xml:space="preserve">
     <value>Install LAV Filters to enable playback of many common audio and video formats</value>
   </data>
+  <data name="ExtensionChoice_Studios" xml:space="preserve">
+    <value>Install extension that adds support for Studios icons in plugins</value>
+  </data>
   <data name="SkinChoice_labelSectionHeader" xml:space="preserve">
     <value>Choose a Skin</value>
   </data>
