MP1-4950: Add settings in MP Configuration and in MP GUI Settings - Fetch Actors info when Movie updated - default False - [SkinControl(19)] protected GUICheckButton btnFetchActors = null;

--- a/mediaportal/Configuration/Sections/MovieDatabase.resx
+++ b/mediaportal/Configuration/Sections/MovieDatabase.resx
@@ -141,4 +141,7 @@ Movie refresh or actor fetch will not work in GUI.
 Also, do not use configuration database importer/editor for those 
 video files beacuse database entries will override this behaviour in GUI.</value>
   </data>
+  <data name="chbFetchActors.ToolTip" xml:space="preserve">
+    <value>Use this option if you want to fetch Actors data when Movie info updated.</value>
+  </data>
 </root>
