--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -2420,5 +2420,6 @@
     <String id="350038">HTPCinfo</String>
 	<String id="350039">Emulators2</String>
 	<String id="350040">MPsteam</String>
+    <String id="350041">Grab Actor details and photo</String>
    </Section>
 </Language>
