--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1730,6 +1730,7 @@
     <String id="14018">Install Update</String>
     <String id="15001">Artist Information</String>
     <String id="15002">Album Information</String>
+    <String id="15003">Simple Now Playing</String>
     <String id="16001">Party Shuffle</String>
     <String id="19001" prefix="My ">Tetris</String>
     <String id="19002">New Game</String>
