--- a/mediaportal/MediaPortal.Base/language/strings_ru.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_ru.xml
@@ -1720,6 +1720,7 @@
 		<String id="14018">Установить обновление</String>
         <String id="15001">О Артисте...</String>
         <String id="15002">О Альбоме...</String>
+        <String id="15003">Простой режим</String>
 		<String id="16001">Микс для вечеринки</String>
 		<String id="19001" prefix="Мой ">Тетрис</String>
 		<String id="19002">Новая игра</String>
