--- a/mediaportal/MediaPortal.Base/language/strings_sv.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_sv.xml
@@ -1094,6 +1094,18 @@
     <String id="1321">Automatiska inställningar för avkodare</String>
     <String id="1322">Tvingande splittring av källfilen</String>
     <String id="1323">Videoavkodare för .TS-filer</String>
+    <String id="1324">Bortse från valt ljudspår och använd det förinställda</String>
+    <String id="1325">Använd ljud/undertext-väljare från LAV Splitter</String>
+    <String id="1330">Endast Användargrupper</String>
+    <String id="1331">Filmsamling</String>
+    <String id="1332">Endast Filmsamling</String>
+    <String id="1333">Lägg till Film i samlingen</String>
+    <String id="1334">Ta bort vald film från samlingen</String>
+    <String id="1335">Uppdatera omslag</String>
+    <String id="1336">Bibliotek</String>
+    <String id="1337">Lägg till ny samling</String>
+    <String id="1338">Ta bort vald samling</String>
+    <String id="1339">CinemaScope 2:35</String>
     <String id="1440" prefix="Min ">Text-TV</String>
     <String id="1441">Text-TV</String>
     <String id="1442">Scroll-hastighet (Horisontell)</String>
@@ -1142,6 +1154,9 @@
     <String id="1654">Vindhastighetsenheter</String>
     <String id="1655">Uppdaterings-intervall</String>
     <String id="1656">minuter</String>
+    <String id="1657">Visa/göm skyddad inspelning</String> 
+    <String id="1658">Vill du att de visas?</String>
+    <String id="1659">Vill du att de göms?</String>
     <String id="1900">För gammalt skin</String>
     <String id="1901">Ditt valda skin ({0}) är för gammalt. Detta kan orsaka problem när du kör MediaPortal. Av denna anledning har MediaPortal tillfälligt aktiverat ett förvalt skin. Om du ändå vill använda ditt valda skin, välj 'Ignorera och pröva'-knappen, men kom ihåg: Skriv INGA felrapporter med detta skin aktiverat!(för att slippa denna varning, vänta tills den försvinner automatiskt eller tryck på back/clear på din fjärrkontroll)</String>
     <String id="1902">Visa inte detta meddelande igen</String>
@@ -1342,6 +1357,11 @@
     <String id="2149">Fråga</String>
     <String id="2160">Uppdatera MediaInfo i vald mapp</String>
     <String id="2161">Avbryt uppdatering av MediaInfo</String>
+    <String id="2162">Ta bort kanal</String>
+    <String id="2163">Lägg till kanalen till gruppen</String>
+    <String id="2164">Ta bort kanalen från denna grupp</String>
+    <String id="2165">Vill du denna kanal från TV-Servern?</String>
+    <String id="2166">Ta bort alla inspelningar i denna mapp?</String>
     <String id="2200" prefix="Min">Utforskare</String>
     <String id="2201">Välj källa</String>
     <String id="2202">Välj mål</String>
@@ -1368,6 +1388,8 @@
     <String id="2223">Papperskorg</String>
     <String id="2224">Mappen finns redan!</String>
     <String id="2225">Mappen skapad!</String>
+    <String id="2498">Göm sedda filmer</String>
+    <String id="2499">Visa sedda filmer</String>
     <String id="2500">Inga söktermer angivna!</String>
     <String id="2501">Vänligen mata in en giltig sökterm!</String>
     <String id="2502">Välj din lokala Wikipedia:</String>
@@ -1705,6 +1727,9 @@
     <String id="14016">Nedladdning</String>
     <String id="14017">Betyg</String>
     <String id="14018">Installera uppdatering</String>
+    <String id="15001">Artist-Information</String>
+    <String id="15002">Album-Information</String>
+    <String id="15003">Förenklad Spelas Nu</String>
     <String id="16001">Partyblanda</String>
     <String id="19001" prefix="Mitt ">Tetris</String>
     <String id="19002">Nytt Spel</String>
@@ -2225,6 +2250,7 @@
     <String id="300093">Starta om MediaPortal vid eventuell krash</String>
     <String id="300094">Fördröjning före omstart</String>
     <String id="300095">Stäng av skärm (vid viloläge)</String>
+    <String id="300096">UHD-TV, Projektorer</String>
     <String id="300100">Aktivera senast valda modul efter vila</String>
     <String id="300102">Fördröj uppstart</String>
     <String id="300103">När MediaPortal startar</String>
@@ -2356,5 +2382,46 @@
     <String id="300230">Stoppa uppspelning när ljuduppspelaren tas bort</String>
     <String id="300231">Minska bildfrekvensen när MediaPortal inte är fokuserat</String>
     <String id="300232">Uppdatera endast filer nyare än {0}</String>
-  </Section>
+    <String id="350001">Tryck på Info/F9 för snabbinställningar...</String>
+    <String id="350002">Filmer</String>
+    <String id="350003">SpelaSkiva</String>
+    <String id="350004">Trakt</String>
+    <String id="350005">TvWishList</String>
+    <String id="350006">OnlineVideos</String>
+    <String id="350007">Extensions</String>
+    <String id="350008">SubCentral</String>
+    <String id="350009">IMDb+</String>
+    <String id="350010">LogoManager</String>
+    <String id="350011">InfoService</String>
+    <String id="350012">Bing Images</String>
+    <String id="350013">MyLyrics</String>
+    <String id="350014">BrowseTheWeb</String>
+    <String id="350015">AirPlayer</String>
+    <String id="350016">Rockstar</String>
+    <String id="350017">ShowTimes</String>
+    <String id="350018">IngenPlugin</String>
+    <String id="350019">Inställningar för etiketter...</String>
+    <String id="350020">Tryck på Info/F9 för alla plugins som stöds...</String>
+    <String id="350021">World Weather Lite</String>
+    <String id="350022">MusicInfo Handler</String>
+    <String id="350023">Inställningar</String>
+    <String id="350024">Guide</String>
+    <String id="350025">Red Bull TV</String>
+    <String id="350026">YouTube</String>
+    <String id="350027">Worldnews</String>
+    <String id="350028">FritzBox</String>
+    <String id="350029">Radiotime</String>
+    <String id="350030">MvCentral</String>
+    <String id="350031">MultiShortcut</String>
+    <String id="350032">World Weather</String>
+    <String id="350033">Spelad tid</String>
+    <String id="350034">Slutar om</String>
+    <String id="350035">MultiShortcut2</String>
+    <String id="350036">MultiShortcut3</String>
+    <String id="350037">MovingPictures</String>
+    <String id="350038">HTPCinfo</String>
+    <String id="350039">Emulators2</String>
+    <String id="350040">MPsteam</String>
+    <String id="350041">Hämta detaljer och foto om skådespelare</String>
+    <String id="350042">Zap Key Timeout</String>  </Section>
 </Language>
