--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1363,6 +1363,9 @@
     <String id="2164">Remove channel from this group</String>
     <String id="2165">Do you want to remove this channel from the TvServer?</String>
     <String id="2166">Delete all recordings in this folder?</String>
+    <String id="2167">Keyword</String>
+    <String id="2168">Update Exif</String>
+    <String id="2169">Go to folder</String>
     <String id="2200" prefix="My ">Explorer</String>
     <String id="2201">Select source</String>
     <String id="2202">Select destination</String>
